<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam_bold"
            android:text="@string/app_name"
            android:textColor="#6F513A"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/kalam_bold"
            android:text="@string/stay_in_control"
            android:textColor="#6F513A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/kalam_bold"
            android:text="@string/login"
            android:textAlignment="viewStart"
            android:textColor="#6F513A"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#2F1C0E"
            android:fontFamily="@font/kalam_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#2F1C0E"
            android:textColorHint="#8B6E54" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#2F1C0E"
            android:fontFamily="@font/kalam_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#2F1C0E"
            android:textColorHint="#8B6E54" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFAE9"
            android:fontFamily="@font/kalam_bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="#4B2E19"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSignupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kalam_regular"
            android:text="@string/sign_up_text_link"
            android:textColor="#2F1C0E"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
